# moco_cli

./: Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  rust-clippy.yml
src/: cli.rs  config.rs  error.rs  main.rs  moco_client.rs  moco_model.rs  utils.rs
src/jira/: jira_client.rs  jira_model.rs  mod.rs
src/jira_tempo/: client.rs  model.rs
src/moco/: client.rs  model.rs
