[package]
name = "mococli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
config = "0.13"
dirs = "4"
clap = { version = "3", features = ["derive"] }
serde = "1"
serde_json = "1"
derive_more = "0"
env_logger = "0.9"
now = "0"
