[package]
name = "mococli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
config = "0.13"
dirs = "5.0.0"
clap = { version = "4.2.1", features = ["derive"] }
serde = "1"
serde_json = "1"
derive_more = "0"
env_logger = "0.10.0"
now = "0"
log = "0.4"
